# dataset-insights

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/dataset_insights/: __init__.py  analyze.py  cli.py  plots.py  reports.py
tests/: conftest.py  test_analyze.py  test_cli.py
